--- a/coffee/sass/typography/_typography.scss
+++ b/coffee/sass/typography/_typography.scss
@@ -2,12 +2,15 @@ body,
 button,
 input,
 select,
-optgroup,
 textarea {
 	color: $color__text-main;
-	font-family: $font__main;
-	@include font-size(1);
+	font-family: $font__serif;
+	@include font-size(.9);
 	line-height: $font__line-height-body;
+	
+	@media screen and (min-width: $query__small) {
+		@include font-size(1);
+	}
 }
 
 @import "headings";
