--- a/coffee/sass/style.scss
+++ b/coffee/sass/style.scss
@@ -1,23 +1,23 @@
 /*!
-Theme Name: coffeeme
-Theme URI: http://underscores.me/
-Author: team24
-Author URI: http://underscores.me/
-Description: Team for assignment 2
+Theme Name: Teamtwentyfour
+Theme URI: https://github.com/cp3402-students/a2-cp3402-2019-team24.git
+Author: Team Twenty Four
+Author URI: https:team-twenty-four
+Description: Building Themes From Scratch Using Underscores 
 Version: 1.0.0
 License: GNU General Public License v2 or later
-License URI: LICENSE
-Text Domain: coffee
-Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Text Domain: Teamtwentyfour
+Tags:
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
-coffeeme is based on Underscores https://underscores.me/, (C) 2012-2017 Automattic, Inc.
+Teamtwentyfour is based on Underscores http://underscores.me/, (C) 2012-2016 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 Normalizing styles have been helped along thanks to the fine work of
-Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
+Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 */
 
 /*--------------------------------------------------------------
@@ -86,14 +86,14 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import "modules/clearings";
 
 /*--------------------------------------------------------------
-# Widgets
---------------------------------------------------------------*/
-@import "site/secondary/widgets";
-
-/*--------------------------------------------------------------
 # Content
 --------------------------------------------------------------*/
 @import "site/site";
+
+/*--------------------------------------------------------------
+# Widgets
+--------------------------------------------------------------*/
+@import "site/secondary/widgets";
 
 /*--------------------------------------------------------------
 # Infinite scroll
