--- a/coffee/sass/navigation/_navigation.scss
+++ b/coffee/sass/navigation/_navigation.scss
@@ -4,6 +4,6 @@
 @import "links";
 
 /*--------------------------------------------------------------
-## Menus
+## Content Navigation
 --------------------------------------------------------------*/
 @import "content-navigation";
