Revert "test commit for presentation"
This reverts commit 187d9108cfa0499e33ed74af9ad0581b6384dd0a.

--- a/themes/coffee/sass/variables-site/_colors.scss
+++ b/themes/coffee/sass/variables-site/_colors.scss
@@ -1,4 +1,4 @@
-$color__skin: #ff0000; // Header etc.
+$color__skin: #3B1E08; // Header etc.
 $color__interactive: #b51c35; // Links, highlights, etc.
 
 $color__background-body: #fff;
