--- a/themes/a2-cp3402-2019-team24/coffee/style.css
+++ b/themes/a2-cp3402-2019-team24/coffee/style.css
@@ -2,7 +2,7 @@
 /*!
 Theme Name: Teamtwentyfour
 Theme URI: https://github.com/cp3402-students/a2-cp3402-2019-team24.git
-Author: Morten Rand-Hendriksen
+Author: Team 24
 Author URI: Teamtwentyfour
 Description: A new them for team twenthy four from scretch.
 Version: 1.0.0
