--- a/themes/a2-cp3402-2019-team24/coffee/sass/variables-site/_colors.scss
+++ b/themes/a2-cp3402-2019-team24/coffee/sass/variables-site/_colors.scss
@@ -1,4 +1,4 @@
-$color__skin: #3B1E08; // Header etc.
+$color__skin: #00FF00; // Header etc.
 $color__interactive: #b51c35; // Links, highlights, etc.
 
 $color__background-body: #fff;
