--- a/themes/a2-cp3402-2019-team24/coffee/style.css
+++ b/themes/a2-cp3402-2019-team24/coffee/style.css
@@ -1063,7 +1063,7 @@ a:hover, a:active {
 	padding: 1em;
 	font-family: "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
 	color: #fff;
-	background-color: #FFFF00;
+	background-color: #00FF00;
 }
 
 @media screen and (min-width: 600px) {
